project(SpringMapConvNG)
cmake_minimum_required(VERSION 2.6)
#find_package(Qt4 REQUIRED)
if (NOT MINGW )
        include_directories(${CMAKE_CURRENT_BINARY_DIR})
else ( NOT MINGW )
        include_directories(${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_SOURCE_DIR}/winlibs/Devil_${ARCH}/include )
        link_directories( ${PROJECT_SOURCE_DIR}/winlibs/Devil_${ARCH}/lib ${PROJECT_SOURCE_DIR}/winlibs/Devil_${ARCH} )

endif ( NOT MINGW )

#qt4_automoc(${springMapConvNG_SRCS})

find_package(DevIL REQUIRED)

add_library(mapconv SHARED CRC.cpp Image.cpp SMFMap.cpp TileStorage.cpp )
add_library(mapconv_static STATIC CRC.cpp Image.cpp SMFMap.cpp TileStorage.cpp )
add_executable(springMapConvNG main.cpp)
add_executable(smfdecompiler smfdecompiler.cpp)
if (NOT MINGW )
target_link_libraries(springMapConvNG IL ILU mapconv_static )
target_link_libraries(mapconv IL ILU )
target_link_libraries(smfdecompiler IL ILU mapconv_static )
else ( NOT MINGW )
target_link_libraries(springMapConvNG DevIL ILU mapconv )
target_link_libraries(mapconv DevIL ILU )
target_link_libraries(smfdecompiler DevIL ILU mapconv )
endif ( NOT MINGW )

install(TARGETS springMapConvNG smfdecompiler RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin )
install(TARGETS mapconv_static ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )
install(TARGETS mapconv LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )
